// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBar: index render component for non oauth mode 1`] = `
"<aside id=\\"sidebar\\" className=\\"sidebar-expand\\">
  <div className=\\"menu\\">
    <NavLink id=\\"network_stats\\" to=\\"/home\\" className=\\"menu-item\\" activeClassName=\\"active-menu-item\\" onClick={[undefined]}>
      <i className=\\"fa fa-chart-simple\\">
         
      </i>
      <span className=\\"menu-text\\">
         
        Network Stats
      </span>
    </NavLink>
    <NavLink id=\\"accounts\\" to=\\"/accounts\\" className=\\"menu-item\\" activeClassName=\\"active-menu-item\\" onClick={[undefined]}>
      <i className=\\"fa fa-users\\">
         
      </i>
      <span className=\\"menu-text\\">
         
        Users
      </span>
    </NavLink>
    <NavLink id=\\"transactions\\" to=\\"/transactions\\" className=\\"menu-item\\" activeClassName=\\"active-menu-item\\" onClick={[undefined]}>
      <i className=\\"fa fa-exchange\\">
         
      </i>
      <span className=\\"menu-text\\">
         
        Transactions
      </span>
    </NavLink>
    <NavLink id=\\"contracts\\" to=\\"/contracts\\" className=\\"menu-item\\" activeClassName=\\"active-menu-item\\" onClick={[undefined]}>
      <i className=\\"fa fa-file-contract\\">
         
      </i>
      <span className=\\"menu-text\\">
         
        Contracts
      </span>
    </NavLink>
    <NavLink id=\\"blocks\\" to=\\"/blocks\\" className=\\"menu-item\\" activeClassName=\\"active-menu-item\\" onClick={[undefined]}>
      <i className=\\"fa fa-cube\\">
         
      </i>
      <span className=\\"menu-text\\">
         
        Blocks
      </span>
    </NavLink>
    <NavLink id=\\"code_editor\\" to=\\"/code_editor\\" className=\\"menu-item\\" activeClassName=\\"active-menu-item\\" onClick={[undefined]}>
      <i className=\\"fa fa-code\\">
         
      </i>
      <span className=\\"menu-text\\">
         
        Contract Editor
      </span>
    </NavLink>
    <NavLink id=\\"external_storage\\" to=\\"/external_storage\\" className=\\"menu-item\\" activeClassName=\\"active-menu-item\\" onClick={[Function: onClick]}>
      <i className=\\"fa fa-cloud-upload\\">
         
      </i>
      <span className=\\"menu-text\\">
        External Storage
      </span>
    </NavLink>
  </div>
  <div className=\\"smd-sidebar-logo\\">
    <a href=\\"http://blockapps.net\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">
      <img src={{...}} width=\\"120\\" alt=\\"Blockapps Logo\\" />
    </a>
  </div>
</aside>"
`;

exports[`SideBar: index render component for public mode 1`] = `
"<aside id=\\"sidebar\\" className=\\"sidebar-expand\\">
  <div className=\\"menu\\">
    <NavLink id=\\"network_stats\\" to=\\"/home\\" className=\\"menu-item\\" activeClassName=\\"active-menu-item\\" onClick={[undefined]}>
      <i className=\\"fa fa-chart-simple\\">
         
      </i>
      <span className=\\"menu-text\\">
         
        Network Stats
      </span>
    </NavLink>
    <NavLink id=\\"accounts\\" to=\\"/accounts\\" className=\\"menu-item\\" activeClassName=\\"active-menu-item\\" onClick={[undefined]}>
      <i className=\\"fa fa-users\\">
         
      </i>
      <span className=\\"menu-text\\">
         
        Users
      </span>
    </NavLink>
    <NavLink id=\\"transactions\\" to=\\"/transactions\\" className=\\"menu-item\\" activeClassName=\\"active-menu-item\\" onClick={[undefined]}>
      <i className=\\"fa fa-exchange\\">
         
      </i>
      <span className=\\"menu-text\\">
         
        Transactions
      </span>
    </NavLink>
    <NavLink id=\\"contracts\\" to=\\"/contracts\\" className=\\"menu-item\\" activeClassName=\\"active-menu-item\\" onClick={[undefined]}>
      <i className=\\"fa fa-file-contract\\">
         
      </i>
      <span className=\\"menu-text\\">
         
        Contracts
      </span>
    </NavLink>
    <NavLink id=\\"blocks\\" to=\\"/blocks\\" className=\\"menu-item\\" activeClassName=\\"active-menu-item\\" onClick={[undefined]}>
      <i className=\\"fa fa-cube\\">
         
      </i>
      <span className=\\"menu-text\\">
         
        Blocks
      </span>
    </NavLink>
    <NavLink id=\\"code_editor\\" to=\\"/code_editor\\" className=\\"menu-item\\" activeClassName=\\"active-menu-item\\" onClick={[undefined]}>
      <i className=\\"fa fa-code\\">
         
      </i>
      <span className=\\"menu-text\\">
         
        Contract Editor
      </span>
    </NavLink>
  </div>
  <div className=\\"smd-sidebar-logo\\">
    <a href=\\"http://blockapps.net\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">
      <img src={{...}} width=\\"120\\" alt=\\"Blockapps Logo\\" />
    </a>
  </div>
</aside>"
`;

exports[`SideBar: index sequence of links for oauth and non-oauth mode eighth position /external-storage 1`] = `
<NavLink
  activeClassName="active-menu-item"
  className="menu-item"
  id="accounts"
  onClick={undefined}
  to="/accounts"
>
  <i
    className="fa fa-users"
  >
     
  </i>
  <span
    className="menu-text"
  >
     
    Users
  </span>
</NavLink>
`;

exports[`SideBar: index sequence of links for oauth and non-oauth mode fifth position /accounts 1`] = `
<NavLink
  activeClassName="active-menu-item"
  className="menu-item"
  id="blocks"
  onClick={undefined}
  to="/blocks"
>
  <i
    className="fa fa-cube"
  >
     
  </i>
  <span
    className="menu-text"
  >
     
    Blocks
  </span>
</NavLink>
`;

exports[`SideBar: index sequence of links for oauth and non-oauth mode first position /home 1`] = `
<NavLink
  activeClassName="active-menu-item"
  className="menu-item"
  id="network_stats"
  onClick={undefined}
  to="/home"
>
  <i
    className="fa fa-chart-simple"
  >
     
  </i>
  <span
    className="menu-text"
  >
     
    Network Stats
  </span>
</NavLink>
`;

exports[`SideBar: index sequence of links for oauth and non-oauth mode fourth position /transactions 1`] = `
<NavLink
  activeClassName="active-menu-item"
  className="menu-item"
  id="contracts"
  onClick={undefined}
  to="/contracts"
>
  <i
    className="fa fa-file-contract"
  >
     
  </i>
  <span
    className="menu-text"
  >
     
    Contracts
  </span>
</NavLink>
`;

exports[`SideBar: index sequence of links for oauth and non-oauth mode seventh position /code_editor 1`] = `
<NavLink
  activeClassName="active-menu-item"
  className="menu-item"
  id="external_storage"
  onClick={[Function]}
  to="/external_storage"
>
  <i
    className="fa fa-cloud-upload"
  >
     
  </i>
  <span
    className="menu-text"
  >
    External Storage
  </span>
</NavLink>
`;

exports[`SideBar: index sequence of links for oauth and non-oauth mode sixth position /contracts 1`] = `
<NavLink
  activeClassName="active-menu-item"
  className="menu-item"
  id="code_editor"
  onClick={undefined}
  to="/code_editor"
>
  <i
    className="fa fa-code"
  >
     
  </i>
  <span
    className="menu-text"
  >
     
    Contract Editor
  </span>
</NavLink>
`;

exports[`SideBar: index sequence of links for oauth and non-oauth mode third position /blocks 1`] = `
<NavLink
  activeClassName="active-menu-item"
  className="menu-item"
  id="transactions"
  onClick={undefined}
  to="/transactions"
>
  <i
    className="fa fa-exchange"
  >
     
  </i>
  <span
    className="menu-text"
  >
     
    Transactions
  </span>
</NavLink>
`;
